# APITesterOSS

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  push-to-github.ps1  push-to-github.sh  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: collection.rs  environment.rs  grpc.rs  history.rs  mod.rs  request.rs
src-tauri/src/db/: migration.rs  repository.rs
src-tauri/src/model/: mod.rs
src/lib/: types.ts
src/lib/components/: AuthPanel.svelte  CodeSnippetModal.svelte  CollectionBrowser.svelte  CollectionRunner.svelte  EnvironmentManager.svelte  GRPCPanel.svelte  HeadersEditor.svelte  HistoryPanel.svelte  ImportModal.svelte  KeyboardShortcutsModal.svelte  ParamsEditor.svelte  PathVariables.svelte  RequestBody.svelte  RequestBuilder.svelte  ResponseViewer.svelte  SSEPanel.svelte  ScriptEditor.svelte  Sidebar.svelte  WebSocketPanel.svelte  send-request.ts
src/lib/stores/: collection.ts  environment.ts  history.ts  request.ts  theme.ts
src/lib/utils/: code-snippets.ts  export-collection.ts  http-methods.ts  keyboard-shortcuts.ts  postman-importer.ts  variable-substitution.ts
